--- a/tofee/pom.xml
+++ b/tofee/pom.xml
@@ -11,4 +11,13 @@
         <maven.compiler.target>19</maven.compiler.target>
         <exec.mainClass>com.mycompany.tofee.Tofee</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.2.0.jre11</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
+    
 </project>
